поправил методы findAllClients и findAllTrainers